--- a/index.html
+++ b/index.html
@@ -1,2 +1,308 @@
-Hello
-kfhcykfj
+HTML5 Tutorial Examples
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
+
+Headings
+<h1>This is heading 1</h1>
+<h2>This is heading 2</h2>
+<h3>This is heading 3</h3>
+Paragraphs
+<p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
+Links
+<a href="https://www.w3schools.com">This is a link</a>
+Images
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+Buttons
+<button>Click me</button>
+Lists
+<ul>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+</ul>
+  
+<ol>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+</ol>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+Line break
+<p>This is a <br> paragraph with a line break.</p>
+href Attribute
+<a href="https://www.w3schools.com">This is a link</a>
+src Attribute
+<img src="img_girl.jpg">
+width and height Attributes
+<img src="img_girl.jpg" width="500" height="600">
+alt Attribute
+<img src="img_girl.jpg" alt="Girl with a jacket">
+style Attribute
+<p style="color:red">This is a paragraph.</p>
+lang Attribute
+<!DOCTYPE html>
+<html lang="en-US">
+<body>
+...
+</body>
+</html>
+title Attribute
+<p title="I'm a tooltip">
+    This is a paragraph.
+</p>
+use lowercase attribute names and use quotes around the values
+
+Headings
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
+Listing in decreasing importance (1 is the most importand and 6 the least)
+Change size
+<h1 style="font-size:60px;">Heading 1</h1>
+Horizontal rule- to separate content
+<h1>This is heading 1</h1>
+<p>This is some text.</p>
+<hr>
+<h2>This is heading 2</h2>
+<p>This is some other text.</p>
+<hr>
+Head- contains metadata and is not displayed
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My First HTML</title>
+  <meta charset="UTF-8">
+</head>
+<body>
+.
+.
+.
+Paragraphs
+<p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
+In html you cannot control display, browser will remove any extra spaces or lines when 
+page is displayed
+Also do not forget the end tag, will be displayed, but could cause errors or unexpected results
+
+Line breaks aka new line
+<p>This is<br>a paragraph<br>with line breaks.</p>
+Preformatted text- displayed in a fixed-width font and preserves spaces and line breaks
+<pre>
+    My Bonnie lies over the ocean.
+  
+    My Bonnie lies over the sea.
+  
+    My Bonnie lies over the ocean.
+  
+    Oh, bring back my Bonnie to me.
+</pre>
+Style Attribute
+<tagname style="property:value;"></tagname>
+Background color
+<body style="background-color:powderblue;">
+    <h1>This is a heading</h1>
+    <p>This is a paragraph.</p>
+</body>
+Text color
+<h1 style="color:blue;">This is a heading</h1>
+<p style="color:red;">This is a paragraph.</p>
+Fonts
+<h1 style="font-family:verdana;">This is a heading</h1>
+<p style="font-family:courier;">This is a paragraph.</p>
+Text size
+<h1 style="font-size:300%;">This is a heading</h1>
+<p style="font-size:160%;">This is a paragraph.</p>
+Text allignment
+<h1 style="text-align:center;">Centered Heading</h1>
+<p style="text-align:center;">Centered paragraph.</p>
+
+Formatting elements
+<b> - Bold text <b>This text is bold</b>
+<strong> - Important text <strong>This text is strong</strong>
+<i> - Italic text <i>This text is italic</i>
+<em> - Emphasized text <em>This text is emphasized</em>
+<mark> - Marked text h2>HTML <mark>Marked</mark> Formatting</h2>
+<small> - Small text <h2>HTML <small>Small</small> Formatting</h2>
+<del> - Deleted text <p>My favorite color is <del>blue</del> red.</p>
+<ins> - Inserted text <p>My favorite <ins>color</ins> is red.</p>
+<sub> - Subscript text <p>This is <sub>subscripted</sub> text.</p>
+<sup> - Superscript text <p>This is <sup>superscripted</sup> text.</p>
+
+Quotations
+<p>WWF's goal is to: <q>Build a future where people live in harmony with nature.</q></p>
+Block Quotations
+<p>Here is a quote from WWF's website:</p>
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+For 50 years, WWF has been protecting the future of nature.
+The world's leading conservation organization,
+WWF works in 100 countries and is supported by
+1.2 million members in the United States and
+close to 5 million globally.
+</blockquote>
+Abbreviations
+<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+Address (contact Info)
+<address>
+    Written by John Doe.<br>
+    Visit us at:<br>
+    Example.com<br>
+    Box 564, Disneyland<br>
+    USA
+</address>
+Cite
+<p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
+bi-directional override
+<bdo dir="rtl">This text will be written from right to left</bdo>
+
+Comments
+<!-- Write your comments here -->
+Can also use to put in notifications or reminders, or explanations
+
+Colors can be specified with name or value
+Text color
+<h1 style="color:Tomato;">Hello World</h1>
+<p style="color:DodgerBlue;">Lorem ipsum...</p>
+<p style="color:MediumSeaGreen;">Ut wisi enim...</p>
+Border Colors
+<h1 style="border:2px solid Tomato;">Hello World</h1>
+<h1 style="border:2px solid DodgerBlue;">Hello World</h1>
+<h1 style="border:2px solid Violet;">Hello World</h1>
+Color values
+<h1 style="background-color:rgb(255, 99, 71);">...</h1>
+<h1 style="background-color:#ff6347;">...</h1>
+<h1 style="background-color:hsl(9, 100%, 64%);">...</h1>
+<h1 style="background-color:rgba(255, 99, 71, 0.5);">...</h1>
+<h1 style="background-color:hsla(9, 100%, 64%, 0.5);">...</h1>
+rgb(red, green, blue) rgba(red, green, blue, alpha)
+#rrggbb
+hsl(hue, saturation, lightness)
+
+CSS- Cascading Style Sheets
+Describes how HTML elements are displayed on screen, paper, or in other media
+Saves a lot of work
+Inline - by using the style attribute in HTML elements
+<h1 style="color:blue;">This is a Blue Heading</h1>
+Internal - by using a <style> element in the <head> section
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
+</head>
+<body>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+</body>
+</html>
+External - by using an external CSS file
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+</body>
+External style sheet must not contain any html and saved with a .css extension , below is an Example
+body {
+    background-color: powderblue;
+  }
+  h1 {
+    color: blue;
+  }
+  p {
+    color: red;
+}
+CSS fonts
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1 {
+  color: blue;
+  font-family: verdana;
+  font-size: 300%;
+}
+p  {
+  color: red;
+  font-family: courier;
+  font-size: 160%;
+}
+</style>
+</head>
+<body>
+
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
+CSS Borders
+p {
+    border: 1px solid powderblue;
+}
+CSS Padding
+p {
+    border: 1px solid powderblue;
+    padding: 30px;
+}
+CSS Margin
+p {
+    border: 1px solid powderblue;
+    margin: 50px;
+}
+id Attribute
+<p id="p01">I am different</p>
+#p01 {
+    color: blue;
+}
+Class Attribute
+<p class="error">I am different</p>
+p.error {
+    color: red;
+}
+External references
+<link rel="stylesheet" href="https://www.w3schools.com/html/styles.css">
+
+
+Example Activities
+<p title ="About W3Schools">W3Schools is a web developer's site.</p>
+<img src="w3schools.jpg" width="250" height="400">
